# rust-mumble-protocol

./: Cargo.toml
examples/: echo_client.rs
src/: control.rs  crypt.rs  voice.rs
