[package]
name = "mumble-protocol-2x"
version = "0.4.1"
authors = [
  "Marco Rebhan <me@dblsaiko.net>",
  "Jonas Herzig <me@johni0702.de>"
]
edition = "2018"
description = "Rust implementation of the Mumble protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/2xsaiko/rust-mumble-protocol"

[features]
default = ["openssl"]
webrtc-extensions = []

[build-dependencies]
protobuf-codegen-pure = "2.25"

[dependencies]
bytes = "1.0"
byteorder = "1"
asynchronous-codec = "0.6.0"
protobuf = "2"
openssl = { version = "0.10", optional = true }

[dev-dependencies]
argparse = "0.2"
futures = "^0.3"
pin-utils = "0.1"
async-native-tls = "^0.3"
asynchronous-codec = "0.6.0"
async-std = { version = "^1.6", features = ["attributes"] }
futures-util = "^0.3"
futures-macro = "^0.3"
